# CoolCompiler

./: .gitignore  CMakeLists.txt  README.md
examples/: arithmetic.cl  conditional.cl  conditionals.cl  hello.cl  helloworld.cl  maths.cl  string.cl  variables.cl
include/: Lexer.h  Token.h
include/cool/: AST.hpp  CodeGenerator.hpp  Lexer.hpp  Parser.hpp  Token.hpp
src/: AST.cpp  CodeGenerator.cpp  Lexer.cpp  Parser.cpp  Token.cpp  main.cpp
